--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-HUGGINGFACE_TOKEN="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"
+READ_TOKEN="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"
+WRITE_TOKEN="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"
